[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-crypto-daily-digest"
version = "0.1.0"
description = "Daily retrieval, filtering, ranking, deduplication, and Chinese digest generation for lattice cryptography papers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=1.10,<3",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
