[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-crypto-daily-digest"
version = "0.3.2"
description = "Daily retrieval, filtering, ranking, deduplication, and Chinese digest generation for lattice cryptography papers."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2",
    "PyYAML>=6",
    "requests>=2",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp"
norecursedirs = [
  ".git",
  ".venv",
  "venv",
  "env",
  "build",
  "dist",
  "site-packages",
  "Lib",
  "Scripts",
  "exports",
  "audits",
  ".pytest_tmp",
  "__pycache__",
]
